@@ -9,6 +9,7 @@ import de.muenchen.dave.domain.elasticsearch.PkwEinheit;
 import de.muenchen.dave.domain.elasticsearch.Zaehlung;
 import de.muenchen.dave.domain.enums.FahrbewegungKreisverkehr;
 import de.muenchen.dave.domain.enums.TypeZeitintervall;
+import de.muenchen.dave.domain.enums.Zaehlart;
 import de.muenchen.dave.domain.enums.ZaehldatenIntervall;
 import de.muenchen.dave.domain.enums.Zaehldauer;
 import de.muenchen.dave.domain.enums.Zeitblock;
@@ -53,14 +54,20 @@ public class LadeZaehldatenService {
     public static final String SPITZENSTUNDE_BLOCK_RAD = SPITZENSTUNDE_BLOCK + " Rad";
     public static final String SPITZENSTUNDE_BLOCK_FUSS = SPITZENSTUNDE_BLOCK + " Fuß";
     private static final Set<Integer> SPITZENSTUNDEN_BLOCK_SORTING_INDEX = new HashSet<>();
+
     private final ZeitintervallRepository zeitintervallRepository;
 
     private final ZaehlstelleIndexService indexService;
 
-    public LadeZaehldatenService(final ZeitintervallRepository zeitintervallRepository,
-            final ZaehlstelleIndexService indexService) {
+    private final ZaehldatenExtractorService zaehldatenExtractorService;
+
+    public LadeZaehldatenService(
+            final ZeitintervallRepository zeitintervallRepository,
+            final ZaehlstelleIndexService indexService,
+            final ZaehldatenExtractorService zaehldatenExtractorService) {
         this.zeitintervallRepository = zeitintervallRepository;
         this.indexService = indexService;
+        this.zaehldatenExtractorService = zaehldatenExtractorService;
         // Kfz
         SPITZENSTUNDEN_BLOCK_SORTING_INDEX
                 .add(ZeitintervallSortingIndexUtil.SORTING_INDEX_ZB_00_06 + ZeitintervallSortingIndexUtil.getSortingIndexSpitzenStundeWithinBlockKfz());
@@ -210,7 +217,7 @@ public class LadeZaehldatenService {
      * @param options zur Bestimmung der {@link TypeZeitintervall}e
      * @return {@link TypeZeitintervall}e für eine korrekte Datenextraktion.
      */
-    private static Set<TypeZeitintervall> getTypesAccordingChosenOptions(final OptionsDTO options) {
+    public static Set<TypeZeitintervall> getTypesAccordingChosenOptions(final OptionsDTO options) {
         final Set<TypeZeitintervall> types = new HashSet<>();
         if (StringUtils.equals(options.getZeitauswahl(), ZEITAUSWAHL_SPITZENSTUNDE_KFZ)) {
             types.add(TypeZeitintervall.SPITZENSTUNDE_KFZ);
@@ -315,16 +322,18 @@ public class LadeZaehldatenService {
      * @return ein {@link LadeZaehldatenTableDTO} mit den {@link LadeZaehldatumDTO}.
      * @throws DataNotFoundException wenn keine Zaehlung gefunden wurde
      */
-    public LadeZaehldatenTableDTO ladeZaehldaten(final UUID zaehlungId,
+    public LadeZaehldatenTableDTO ladeZaehldaten(
+            final UUID zaehlungId,
             final OptionsDTO options) throws DataNotFoundException {
 
         final LadeZaehldatenTableDTO ladeZaehldatenTable = new LadeZaehldatenTableDTO();
         final List<Zeitintervall> zeitintervalle;
         final Zaehlung zaehlung = indexService.getZaehlung(zaehlungId.toString());
+        final var zaehlart = Zaehlart.valueOf(zaehlung.getZaehlart());
         if (StringUtils.contains(options.getZeitauswahl(), ZEITAUSWAHL_SPITZENSTUNDE)) {
-            zeitintervalle = extractZeitintervalleForSpitzenstunde(zaehlungId, zaehlung.getKreisverkehr(), options);
+            zeitintervalle = extractZeitintervalleForSpitzenstunde(zaehlungId, zaehlart, zaehlung.getKreisverkehr(), options);
         } else {
-            zeitintervalle = extractZeitintervalle(zaehlungId, zaehlung.getKreisverkehr(), options);
+            zeitintervalle = extractZeitintervalle(zaehlungId, zaehlart, zaehlung.getKreisverkehr(), options);
         }
         final PkwEinheit pkwEinheit = zaehlung.getPkwEinheit();
         List<LadeZaehldatumDTO> ladeZaehldaten = zeitintervalle.stream()
@@ -335,17 +344,19 @@ public class LadeZaehldatenService {
         return ladeZaehldatenTable;
     }
 
-    private List<Zeitintervall> extractZeitintervalle(final UUID zaehlungId,
+    private List<Zeitintervall> extractZeitintervalle(
+            final UUID zaehlungId,
+            final Zaehlart zaehlart,
             final Boolean isKreisverkehr,
             final OptionsDTO options) {
         final Set<TypeZeitintervall> types = getTypesAccordingChosenOptions(options);
         log.debug("Types according chosen options: {}", types);
         final List<Zeitintervall> extractedZeitintervalle = extractZeitintervalle(
                 zaehlungId,
+                zaehlart,
                 options.getZeitblock().getStart(),
                 options.getZeitblock().getEnd(),
-                options.getVonKnotenarm(),
-                options.getNachKnotenarm(),
+                options,
                 isKreisverkehr,
                 types);
         log.debug("Size of extracted Zeitintervalle: {}", extractedZeitintervalle.size());
@@ -354,48 +365,25 @@ public class LadeZaehldatenService {
                 .collect(Collectors.toList());
     }
 
-    public List<Zeitintervall> extractZeitintervalle(final UUID zaehlungId,
+    public List<Zeitintervall> extractZeitintervalle(
+            final UUID zaehlungId,
+            final Zaehlart zaehlart,
             final LocalDateTime startUhrzeit,
             final LocalDateTime endeUhrzeit,
-            final Integer von,
-            final Integer nach,
+            final OptionsDTO options,
             final Boolean isKreisverkehr,
             final Set<TypeZeitintervall> types) {
-        final FahrbewegungKreisverkehr fahrbewegungKreisverkehr = createFahrbewegungKreisverkehr(von, nach, isKreisverkehr);
-        final Integer vonKnotenarm;
-        final Integer nachKnotenarm;
-        if (isKreisverkehr) {
-            /*
-             * In {@link de.muenchen.dave.domain.Verkehrsbeziehung} definiert das Attribut "von"
-             * den im Kreisverkehr jeweils betroffenen Knotenarm.
-             * Das Attribut "nach" ist immer "null".
-             */
-            if (ObjectUtils.isNotEmpty(von) && ObjectUtils.isEmpty(nach)) {
-                // Hinein
-                vonKnotenarm = von;
-            } else if (ObjectUtils.isEmpty(von) && ObjectUtils.isNotEmpty(nach)) {
-                // Heraus
-                vonKnotenarm = nach;
-            } else {
-                // Alles Hinein + Heraus + Vorbei
-                vonKnotenarm = null;
-            }
-            nachKnotenarm = null;
-        } else {
-            vonKnotenarm = von;
-            nachKnotenarm = nach;
-        }
-        return extractZeitintervalle(
+        return zaehldatenExtractorService.extractZeitintervalle(
                 zaehlungId,
+                zaehlart,
                 startUhrzeit,
                 endeUhrzeit,
-                vonKnotenarm,
-                nachKnotenarm,
-                fahrbewegungKreisverkehr,
+                isKreisverkehr,
+                options,
                 types);
     }
 
-    public List<Zeitintervall> extractZeitintervalle(final UUID zaehlungId,
+    public List<Zeitintervall> extractZeitintervalleOld(final UUID zaehlungId,
             final LocalDateTime startUhrzeit,
             final LocalDateTime endeUhrzeit,
             final Integer von,
@@ -422,10 +410,12 @@ public class LadeZaehldatenService {
      * @return die 15-minütigen {@link Zeitintervall}e welche die gewählte Spitzenstunde definieren
      *         gefolgt vom {@link Zeitintervall} der Spitzenstunde.
      */
-    private List<Zeitintervall> extractZeitintervalleForSpitzenstunde(final UUID zaehlungId,
+    private List<Zeitintervall> extractZeitintervalleForSpitzenstunde(
+            final UUID zaehlungId,
+            final Zaehlart zaehlart,
             final Boolean isKreisverkehr,
             final OptionsDTO options) {
-        final List<Zeitintervall> spitzenstunden = extractZeitintervalle(zaehlungId, isKreisverkehr, options);
+        final List<Zeitintervall> spitzenstunden = extractZeitintervalle(zaehlungId, zaehlart, isKreisverkehr, options);
         final List<Zeitintervall> extractedZeitintervalle;
         if (!spitzenstunden.isEmpty()) {
             /*
@@ -435,13 +425,13 @@ public class LadeZaehldatenService {
              * Bei Auswahl eines bestimmten Zeitblocks (nicht gesamter Tag) wird nur diese eine Spitzenstunde
              * in der Liste zurückgegeben. Diese wird ebenfalls vom Ende der Liste extrahiert.
              */
-            final Zeitintervall spitzenStunde = spitzenstunden.get(spitzenstunden.size() - 1);
+            final Zeitintervall spitzenStunde = spitzenstunden.getLast();
             extractedZeitintervalle = extractZeitintervalle(
                     zaehlungId,
+                    zaehlart,
                     spitzenStunde.getStartUhrzeit(),
                     spitzenStunde.getEndeUhrzeit(),
-                    options.getVonKnotenarm(),
-                    options.getNachKnotenarm(),
+                    options,
                     isKreisverkehr,
                     SetUtils.hashSet(TypeZeitintervall.STUNDE_VIERTEL));
             if (BooleanUtils.isTrue(options.getSpitzenstunde())) {
